@@ -3,12 +3,17 @@
 
 	<data>
 		<key>type</key>
-		<version>5.2.0</version>
-        <lastMod>2013-02-27</lastMod>
+		<version>5.2.1</version>
+        <lastMod>2013-03-15</lastMod>
 		<install>YES</install>
         <menu>NO</menu>
 		<name><![CDATA[Type]]></name>
 	</data>
+
+    <i18n>
+        <file>row.php</file>
+        <file>type.php</file>
+    </i18n>
 
     <locale language="fr_FR">
         <name><![CDATA[Type]]></name>
