@@ -4,5 +4,8 @@ Kodeine Change log
 * = Autre / Divers / Inclassable...
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+2013-03-15
++ Deplacement de la gestion des type dans le module
+
 2013-02-14
 + Creation du module
